Reinstate contents on README

--- a/README.textile
+++ b/README.textile
@@ -1,5 +1,36 @@
 h1. com_connect
 
+h2. Contents
+
+* "Introduction":#introduction
+* "Installing and upgrading":#install
+* "Migrating from zem_contact_reborn":#differences
+* "Usage":#usage
+* "Tags":#tags
+** "com_connect tag":#cc
+** "com_connect_text tag":#cc_text
+** "com_connect_email tag":#cc_email
+** "com_connect_textarea tag":#cc_textarea
+** "com_connect_submit tag":#cc_submit
+** "com_connect_select tag":#cc_select
+** "com_connect_option tag":#cc_option
+** "com_connect_checkbox tag":#cc_checkbox
+** "com_connect_radio tag":#cc_radio
+** "com_connect_secret tag":#cc_secret
+** "com_connect_serverinfo tag":#cc_serverinfo
+** "com_connect_send_article tag":#cc_send_article
+** "com_connect_label tag":#cc_label
+** "com_connect_value tag":#cc_value
+** "com_connect_if tag":#cc_if
+* "Advanced examples":#advanced
+** "Separate input and error forms":#advanced1
+** "User selectable subject field":#advanced2
+** "User selectable recipient, without showing email address":#advanced3
+* "Styling":#styling
+* "Plugin API and callback events":#api
+* "Frequently asked questions":#faq
+* "Authors/credits":#credits
+
 h2(#introduction). Introduction
 
 A Textpattern CMS form mailer plugin. @<txp:com_connect />@ produces a flexible, customisable email contact form. It is intended for use as an enquiry form for commercial and private sites, and includes several features to help reduce common problems with such forms (invalid email addresses, missing information).
