--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -1,5 +1,10 @@
 h1. Changelog
 
+h2. 4.6.0-beta.3 - 2018-10-05
+
+* Updated Composer installation.
+* Added code syntax highlighting.
+
 h2. 4.6.0-beta.2 - 2018-04-11
 
 * @zcr_file_attach@ has been renamed with @ext_@ prefix.
