--- a/CHANGELOG.textile
+++ b/CHANGELOG.textile
@@ -6,11 +6,13 @@ h2. 4.7.0 - YYYY-MM-DD
 * Add en language designators to Textpack (thanks, cara-tm).
 * Only display labels if they've been specified (thanks, dragondz and jools-r).
 * Fallback on name if label is empty.
+* Use 'expire' attribute value in deletion of old tokens.
 * Sanitize field names so forms still submit if names contain spaces.
 * Permit {Option label} syntax to specify empty select entry that validates
   (thanks, phiw13 and colak).
 * Fix @<txp:com_connect_value>@ to actually match labels.
 * Remove use of deprecated EvalElse().
+* Replace deprecated Txp core functions with Txp::get().
 * Use PHP_EOL instead of manual newlines.
 
 h2. 4.6.0 - 2020-01-31
